# GameWatch

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  DISTRIBUTING.md  README.md  build_commands_used.txt  commands_used_when_distributing.txt  vcpkg.json  vcpkg_install_cmds.txt
source_code/headers/: config.hpp  console.hpp  entry.hpp  entry_manager.hpp  file_management.hpp  internet_management.hpp  menu_base.hpp  menu_helpers.hpp  menu_id.hpp  menu_list.hpp  menus.hpp  option_base.hpp  option_id.hpp  options.hpp  package.hpp  print_msgs.hpp  print_tag.hpp  seconds_type.hpp
source_code/sources/: config.cpp  console.cpp  entry.cpp  entry_manager.cpp  file_management.cpp  internet_management.cpp  main.cpp  menu_base.cpp  menu_helpers.cpp  menus.cpp  option_base.cpp  options.cpp  package.cpp
